# envvault

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: envvault.rb
src/: errors.rs  lib.rs  main.rs
src/audit/: mod.rs
src/cli/: env_parser.rs  gitignore.rs  mod.rs  output.rs
src/cli/commands/: audit_cmd.rs  auth.rs  completions.rs  delete.rs  diff.rs  edit.rs  env_clone.rs  env_delete.rs  env_list.rs  export.rs  get.rs  import_cmd.rs  init.rs  list.rs  mod.rs  rotate.rs  run.rs  scan.rs  search.rs  set.rs  update.rs  version.rs
src/config/: global.rs  mod.rs  settings.rs
src/crypto/: encryption.rs  kdf.rs  keyfile.rs  keys.rs  mod.rs
src/git/: mod.rs
src/keyring/: mod.rs
src/vault/: format.rs  mod.rs  secret.rs  store.rs
src/version_check/: mod.rs
tests/: cli_integration.rs  crypto_tests.rs  phase2_tests.rs  phase3_tests.rs  v05_integration_tests.rs  vault_tests.rs
website/: index.html  roadmap.html
website/css/: styles.css
website/js/: main.js
